add_subdirectory(api)
add_subdirectory(boot)
add_subdirectory(cimpl)
add_subdirectory(file)
add_subdirectory(firmware)
add_subdirectory(font)
add_subdirectory(hidapi)
add_subdirectory(hidhide)
add_subdirectory(imgui)
add_subdirectory(iracing)
add_subdirectory(resource)
add_subdirectory(rest)
add_subdirectory(sentry)
add_subdirectory(serial)
add_subdirectory(systray)
add_subdirectory(texture)
add_subdirectory(vigem)