# Include the subdirectories for each component

add_subdirectory(api)       # Include the 'api' component
add_subdirectory(boot)      # Include the 'boot' component
add_subdirectory(cimpl)     # Include the 'cimpl' component
add_subdirectory(file)      # Include the 'file' component
add_subdirectory(firmware)  # Include the 'firmware' component
add_subdirectory(font)      # Include the 'font' component
add_subdirectory(hidapi)    # Include the 'hidapi' component
add_subdirectory(hidhide)   # Include the 'hidhide' component
add_subdirectory(imgui)     # Include the 'imgui' component
add_subdirectory(iracing)   # Include the 'iracing' component
add_subdirectory(nanovg)    # Include the 'nanovg' component
add_subdirectory(resource)  # Include the 'resource' component
add_subdirectory(rest)      # Include the 'rest' component
add_subdirectory(sentry)    # Include the 'sentry' component
add_subdirectory(serial)    # Include the 'serial' component
add_subdirectory(subprocess) # Include the 'subprocess' component
add_subdirectory(systray)   # Include the 'systray' component
add_subdirectory(texture)   # Include the 'texture' component
add_subdirectory(vigem)     # Include the 'vigem' component
