add_executable(visor
    "visor.rc"
    "application.cxx"
    "main.cxx"
    "gui.cxx"
    "version.cxx"
    "animation_instance.cxx"
    "device_context.cxx"
)

target_link_libraries(visor
    CONAN_PKG::glm
    CONAN_PKG::spdlog
    CONAN_PKG::fmt
    CONAN_PKG::glfw
    CONAN_PKG::glbinding
    CONAN_PKG::imgui
    CONAN_PKG::freetype
    CONAN_PKG::pystring

    api
    boot
    imgui
    hidhide
    font
    vigem
    systray
    sentry
    texture
    file
    cimpl
    firmware
    iracing
)
